# ticket_api

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-130a671f894603cdf91d2d4a7532f48672e006a715a8153332e2eaf502a343f3.json  query-76236847e0e994f2a46966288eed6f9f3f4ba37fc210a1da1c4d7d929b788ceb.json  query-868b5f3dac89b555a1df7e702b69edac97718a49e62b64b51364b760fe3a690b.json  query-df4d7a34f61f817c5a86202e8c68c43ea9e1d5cff014e4e1a5563faf42c7383e.json
migrations/: 20250720081908_initial_schema.sql
src/: main.rs
src/config/: database.rs  mod.rs
src/controllers/: mod.rs  ticket.rs
src/models/: ticket.rs
src/repositories/: ticket.rs
src/services/: mod.rs  ticket.rs
src/views/: ticket.rs
